fixed overlapping of footer and legend

--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,17 @@ p {
 
 
 .footer {
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: #007e90;
     color: white;
     text-align: center;
+}
+
+.space{
+    padding-bottom: 4em;
 }
 
 .axis path, .axis line {
